[package]
name = "lyghts"
version = "0.1.0"
authors = ["Krishna Penukonda <penukonda.krishna.moorthy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2.0", features = ["image", "debug"] }
env_logger = "0.8"
